--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="resolution/index.html">select camera resolution</a></li>
             <li><a href="multiple/index.html">multiple</a></li>
             <li><a href="rtc-codec/index.html">change codec before peer connection</a></li>
+            <li><a href="AEC/index.html">AEC</a></li>
         </ul>
     </section>
 
